# lightweaver_bot

./: .gitignore  README.md  lightweaver.db  lightweaverdb.sql  lightweaverdbschema.sql  lightweaverschema.sql  pyproject.toml  setup.cfg
init/: dbgen.txt
rsarb/: RedditScanAndReplyBot.py
rsarb/util/: praw_funcs.py
src/: RedditScanAndReplyBot.py  admin.py  poster.py  run.py  scanner.py  scanner2.py
src/RedditScanAndReplyBot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reddit_scan_and_reply_bot/: RedditScanAndReplyBot.py
src/reddit_scan_and_reply_bot/util/: praw_funcs.py  sql_funcs.py
src/rsarb/util/: sql_funcs.py
src/util/: praw_funcs.py  sql_funcs.py
tests/: .configwithmissingoptions  .exampleconfig  conftest.py  example_config.ini  invalid_config_bad_DATABASE.ini  invalid_config_bad_PRAW.ini  invalid_config_missing_section.ini  test.db  test_PRAW_functionality.py  test_SQL_functionality.py  test_bot_functionality.py  test_scanner.py
