[tool.pytest.ini_options]
testpaths = ['tests']
python_functions = ['test_*', 'it_*']
pythonpath = [
    ".","src","rsarb","util", "src/rsarb"
]

[tool.poetry]
name = "rsarb"
version = "0.0.5"
description = "A tool to scrape Reddit for entries in a database, and reply with formatted text based on that entry."
authors = ["ChangelingX <lee@brightstep.me>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
praw = ">=7.5"
schedule = "1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/legacy/"