[metadata]
name = RedditScanAndReplyBot
version = 0.0.2
author = Lee Ninteau
author_email = lee@brightstep.me
description = A tool to scrape Reddit for entries in a database, and reply with formatted text based on that entry.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChangelingX/lightweaver_bot
project_urls =
    Bug Tracker = https://github.com/ChangelingX/lightweaver_bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    praw>="7.5"

[options.packages.find]
where = src